2005-07-24  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* flower/include/guile-compatibility.hh (SCM_I_CONSP): add
	SCM_I_CONSP

	* Documentation/user/invoking.itely (Invoking lilypond): add
	LILYPOND_GC_YIELD documentation.

	* lily/*: cleanups: use scm_from_int iso. scm_int2num. Idem for
	scm_from_real / scm_make_real.

	* lily/main.cc (setup_guile_env): new function. Set GC min_yields
	higher. This increases memory footprint, but provides overall
	speedup of 15 to 20%. 

	* lily/include/translator.hh (class Translator): remove
	PRECOMPUTED_VIRTUAL everywhere.

	* lily/include/lily-guile.hh: inline scm_c[ad]r, scm_is_pair.

	* lily/context.cc (now_mom): non-recursive now_mom() 

	* lily/include/profile.hh: new file.

	* lily/profile.cc: new file.

	* lily/grob.cc (Grob): look properties up directly.

	* lily/open-type-font.cc (get_indexed_char): cache index -> bbox
	lookups.

	* lily/include/box.hh (class Box): smob Box type.

	* lily/smobs.cc (protect_smob): O(1) GC (un)protection.

	* lily/include/smobs.hh (DECLARE_BASE_SMOBS): add methods
	protect() and unprotect(). Use throughout.

2005-07-24  Nicolas Sceaux  <nicolas.sceaux@free.fr>

	* Documentation/topdocs/NEWS.tely: new item for \displayLilyMusic

	* scm/define-music-display-methods.scm (markup->lily-string):
	markup elements can also be strings (without simple-markup
	appended)

2005-07-24  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/context.cc (where_defined): also assign value in
	where_defined().

	* lily/bezier.cc (get_other_coordinate): use curve_coordinate
	(curve_coordinate): new function

	* lily/simple-spacer.cc (add_columns): only add rods between
	column i and begin/end if keep-inside-line is set (this repleces
	allow-outside-line as default)

2005-07-23  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/tuplet-engraver.cc (start_translation_timestep): only read
	tupletSpannerDuration if applicable.

	* lily/font-size-engraver.cc (process_music): read fontSize only
	once per timestep.
