@@ -1,3 +1,8 @@
+2005-07-25  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* scm/lily.scm (lilypond-all): clear anonymous modules after
+	processing files.
+
 2005-07-24  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
 	* flower/include/guile-compatibility.hh (SCM_I_CONSP): add
